use/installing-ed-platform/release-5.1.0/build.md
# Build

### Overview <a href="#overview" id="overview"></a>

To install SunbirdED `release-5.1.0`, we will need to run many Jenkins jobs and a couple of manual steps. Some of the jobs need to be run in a specific order. This page details out the list of jobs, their order and the github release tags to be used for each job.

**Create Plugin Containers / Folder Structure**

* We will create few folders in object storage for storing sunbird plugins
* Our deployment job always tries to delete the folder first before uploading, so we need to have the placeholders before running the jobs
* Create a public object storage with the name you have set for the variable `cloud_storage_content_bucketname`&#x20;
* Under `cloud_storage_content_bucketname` create folders with below names.
  * collection-editor
  * generic-editor
  * content-editor
  * v3/preview (under v3 folder create preview folder)
* Upload the default T\&C file to `cloud_storage_content_bucketname` in a folder named **terms-and-conditions**. You can get a copy of the sample T\&C file from [here](https://sunbirdpublic.blob.core.windows.net/installation/terms-and-conditions/terms-and-conditions-v9.html). You are free to edit the HTML as per your requirements
* Create another object store with the name you have set for the variable `cloud_storage_label_bucketname`
* Go to cloned sunbird-devops repo and navigate to `cd sunbird-devops/utils/portal` and upload all files to `cloud_storage_label_bucketname`

**Upload Initial Plugins**

* Upload the initial set of plugins to `cloud_storage_content_bucketname` container
* Download the initial Plugins from [here](https://sunbirdpublic.blob.core.windows.net/installation/content-plugins.zip)
* Unzip **content-plugins.zip** and upload all the files and folders to `cloud_storage_content_bucketname/content-plugins` object storage
* Create a object storage with name you have set for the variable `cloud_storage_public_bucketname` with public access level
* Create a object storage with name you have set for the variable `cloud_storage_artifacts_bucketname` with private access level

**Upload Maxmind Database to Object storage**

* Download the Maxmind city database in zip format from Maxmind website
* Upload the zip file to the `cloud_storage_artifacts_bucketname` object storage

**Build source code**

> **Note**:
>
> * Jenkins will have many jobs which may not be documented or is not suitable for adoption yet
> * Jobs listed on this page is sufficient to setup Sunbird and not every job present in Jenkins is required to be run
> * Jobs can be run in parallel to speed up execution. The only exception is you should **NOT** run multiple jobs which clone the code from same repo in parallel
> * If you get errors in some of the build jobs, rerun the job again
> * The errors are usually due to missing maven jars or maven repo timeouts
> * If you get errors even after re-running the job, come back to it later, there are other jobs which would generate dependent jars

| JENKINS JOB TO RUN                       | GITHUB TAG                                                                                                          | GITHUB REPO                                                                                                                                | COMMENTS                                                                  |
| ---------------------------------------- | ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------- |
| Build/Core/AdminUtils                    | release-4.5.0\_RC3                                                                                                  | [https://github.com/project-sunbird/sunbird-apimanager-util.git](https://github.com/project-sunbird/sunbird-apimanager-util.git)           | Handles mobile device registration, refresh token                         |
| Build/Core/Analytics                     | release-5.1.0\_RC2                                                                                                  | [https://github.com/project-sunbird/sunbird-analytics-service.git](https://github.com/project-sunbird/sunbird-analytics-service.git)       | Location Register, Location Retrieval                                     |
| Build/Core/APIManager                    | release-4.10.0\_RC1                                                                                                 | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                             | The API Gateway                                                           |
| Build/Core/ApiManagerEcho                | master-RC1                                                                                                          | [https://github.com/project-sunbird/sunbird-echo-service.git](https://github.com/project-sunbird/sunbird-echo-service.git)                 | Simply echos the request                                                  |
| Build/Core/Assessment                    | release-5.2.0\_RC2                                                                                                  | [https://github.com/project-sunbird/knowledge-platform.git](https://github.com/project-sunbird/knowledge-platform.git)                     | Handles course assessments                                                |
| Build/Core/Bot                           | release-3.9.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-bot.git](https://github.com/project-sunbird/sunbird-bot.git)                                   | Frontend for the chatbot                                                  |
| Build/Core/Cassandra                     | release-4.10.0\_RC1                                                                                                 | [https://github.com/project-sunbird/sunbird-utils.git](https://github.com/project-sunbird/sunbird-utils.git)                               | Handles the Cassandra database schema                                     |
| Build/Core/CassandraTrigger              | release-4.6.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-utils.git](https://github.com/project-sunbird/sunbird-utils.git)                               | Creates few Cassandra Triggers                                            |
| Build/Core/Cert                          | release-5.0.0\_RC2                                                                                                  | [https://github.com/project-sunbird/cert-service.git](https://github.com/project-sunbird/cert-service.git)                                 | Handles course certificates                                               |
| Build/Core/CertRegistryService           | release-5.0.0\_RC1                                                                                                  | [https://github.com/project-sunbird/certificate-registry.git](https://github.com/project-sunbird/certificate-registry.git)                 | Helper for Certificate service                                            |
| Build/Core/Content                       | release-5.2.0\_RC2                                                                                                  | [https://github.com/project-sunbird/knowledge-platform.git](https://github.com/project-sunbird/knowledge-platform.git)                     | Handles the Contents and Content Metadata                                 |
| Build/Core/Dial                          | release-5.2.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-dial-service.git](https://github.com/project-sunbird/sunbird-dial-service.git)                 | Handles QR code generation                                                |
| Build/Core/DiscussionsMiddleware         | release-5.0.0\_RC2                                                                                                  | [https://github.com/Sunbird-Ed/discussions-middleware.git](https://github.com/Sunbird-Ed/discussions-middleware.git)                       | Middleware for discussion forum                                           |
| Build/Core/EncService                    | release-3.8.0\_RC1                                                                                                  | [https://github.com/project-sunbird/enc-service](https://github.com/project-sunbird/enc-service)                                           | Encryption service to setup certificate signing keys                      |
| Build/Core/Groups                        | release-5.0.0\_RC2                                                                                                  | [https://github.com/project-sunbird/groups-service.git](https://github.com/project-sunbird/groups-service.git)                             | Handles groups functions                                                  |
| Build/Core/Keycloak                      | release-3.8.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-auth.git](https://github.com/project-sunbird/sunbird-auth.git)                                 | User authentication service                                               |
| Build/Core/KnowledgeMW                   | release-5.2.0\_RC1                                                                                                  | [https://github.com/project-sunbird/knowledge-mw-service.git](https://github.com/project-sunbird/knowledge-mw-service.git)                 | Middleware for Content service                                            |
| Build/Core/Learner                       | release-5.0.1\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-lms-service.git](https://github.com/project-sunbird/sunbird-lms-service.git)                   | Handles user and organizations                                            |
| Build/Core/Lms                           | release-5.0.0\_RC2                                                                                                  | [https://github.com/project-sunbird/sunbird-course-service.git](https://github.com/project-sunbird/sunbird-course-service.git)             | Handles courses                                                           |
| Build/Core/Nodebb                        | github\_release\_tag: release-5.0.0\_RC1, nodebb\_branch: v1.18.6                                                   | [https://github.com/project-sunbird/sunbird-nodebb.git](https://github.com/project-sunbird/sunbird-nodebb.git)                             | Handles the discussion forum                                              |
| Build/Core/Notification                  | release-5.0.0\_RC2                                                                                                  | [https://github.com/project-sunbird/sunbird-notification-service.git](https://github.com/project-sunbird/sunbird-notification-service.git) | Handles notifications                                                     |
| Build/Core/Player                        | release-5.1.0\_RC28                                                                                                 | [https://github.com/Sunbird-Ed/SunbirdEd-portal.git](https://github.com/Sunbird-Ed/SunbirdEd-portal.git)                                   | Handles the UI elements                                                   |
| Build/Core/Print                         | release-3.8.0\_RC1                                                                                                  | [https://github.com/project-sunbird/print-service.git](https://github.com/project-sunbird/print-service.git)                               | Handles PDF generation of certificates                                    |
| Build/Core/Proxy                         | release-3.8.0\_RC14                                                                                                 | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                             | Nginx web server / proxy                                                  |
| Build/Core/Report                        | release-4.10.0\_RC6                                                                                                 | [https://github.com/project-sunbird/sunbird-report-service.git](https://github.com/project-sunbird/sunbird-report-service.git)             | Handles some of the reports                                               |
| Build/Core/Router                        | release-3.9.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-bot.git](https://github.com/project-sunbird/sunbird-bot.git)                                   | Backend for chatbot                                                       |
| Build/Core/Search                        | release-5.0.0\_RC2                                                                                                  | [https://github.com/project-sunbird/knowledge-platform.git](https://github.com/project-sunbird/knowledge-platform.git)                     | Handles contents / course search                                          |
| Build/Core/Taxonomy                      | release-5.2.0\_RC3                                                                                                  | [https://github.com/project-sunbird/knowledge-platform.git](https://github.com/project-sunbird/knowledge-platform.git)                     | Handles the taxonomies                                                    |
| Build/Core/Telemetry                     | release-3.3.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-telemetry-service.git](https://github.com/project-sunbird/sunbird-telemetry-service.git)       | Handles the telemetry generated                                           |
| Build/KnowledgePlatform/CassandraTrigger | release-3.8.0\_RC18                                                                                                 | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git)       | Creates few Cassandra Triggers                                            |
| Build/KnowledgePlatform/FlinkJobs        | release-5.2.0\_RC5                                                                                                  | [https://github.com/project-sunbird/knowledge-platform-jobs.git](https://github.com/project-sunbird/knowledge-platform-jobs.git)           | Multiple functions like search indexing, video streaming                  |
| Build/KnowledgePlatform/Learning         | github\_release\_tag: release-5.2.0\_RC3, profile\_id: platform-services                                            | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git)       | Handles frameworks                                                        |
| Build/KnowledgePlatform/Neo4j            | release-4.1.0\_RC2                                                                                                  | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git)       | Generates neo4j plugins                                                   |
| Build/KnowledgePlatform/SyncTool         | release-4.5.0\_RC12                                                                                                 | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git)       | Generates a jar to manually sync contents                                 |
| Build/DataPipeline/AdhocScripts          | release-4.5.1\_RC1                                                                                                  | [https://github.com/Sunbird-Ed/sunbird-data-products.git](https://github.com/Sunbird-Ed/sunbird-data-products.git)                         | Generates supporting scripts for reporting                                |
| Build/DataPipeline/AnalyticsCore         | release-5.0.0\_RC2                                                                                                  | [https://github.com/project-sunbird/sunbird-analytics-core.git](https://github.com/project-sunbird/sunbird-analytics-core.git)             | Generates core libraries for reporting                                    |
| Build/DataPipeline/CoreDataProducts      | release-5.0.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-core-dataproducts.git](https://github.com/project-sunbird/sunbird-core-dataproducts.git)       | Generates supporting libraries for reporting                              |
| Build/DataPipeline/EdDataProducts        | release-5.0.0\_RC2                                                                                                  | [https://github.com/Sunbird-Ed/sunbird-data-products.git](https://github.com/Sunbird-Ed/sunbird-data-products.git)                         | Generates supporting libraries for reporting                              |
| Build/DataPipeline/ETLJobs               | release-4.10.5\_RC2                                                                                                 | [https://github.com/Sunbird-Ed/sunbird-data-products.git](https://github.com/Sunbird-Ed/sunbird-data-products.git)                         | Extract, Transform, Data Loading jobs                                     |
| Build/DataPipeline/FlinkPipelineJobs     | release-4.9.0\_RC2                                                                                                  | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)               | Handles processing of telemetry data                                      |
| Build/DataPipeline/Secor                 | secor-0.29\_RC2                                                                                                     | [https://github.com/project-sunbird/secor.git](https://github.com/project-sunbird/secor.git)                                               | Handlles backup of telemetry data to Object storage                       |
| Build/Lern/LernDataProducts              | release-5.0.1                                                                                                       | [https://github.com/Sunbird-Lern/data-products.git](https://github.com/Sunbird-Lern/data-products.git)                                     | New Lern BB jobs                                                          |
| Build/Lern/LernFlinkJobs                 | release-5.0.1                                                                                                       | [https://github.com/Sunbird-Lern/data-pipeline.git](https://github.com/Sunbird-Lern/data-pipeline.git)                                     | New Lern BB jobs                                                          |
| Build/managed-learn/ml-core-service      | release-5.1.0\_RC6                                                                                                  | [https://github.com/project-sunbird/ml-core-service.git](https://github.com/project-sunbird/ml-core-service.git)                           |                                                                           |
| Build/managed-learn/ml-project-service   | release-5.1.0\_RC9                                                                                                  | [https://github.com/project-sunbird/ml-projects-service.git](https://github.com/project-sunbird/ml-projects-service.git)                   |                                                                           |
| Build/managed-learn/ml-report-service    | release-5.1.0\_RC4                                                                                                  | [https://github.com/project-sunbird/ml-reports-service.git](https://github.com/project-sunbird/ml-reports-service.git)                     |                                                                           |
| Build/managed-learn/ml-survey-service    | release-5.1.0\_RC2                                                                                                  | [https://github.com/project-sunbird/ml-survey-service.git](https://github.com/project-sunbird/ml-survey-service.git)                       |                                                                           |
| Build/Sunbird-RC/CertificateApi          | <p>github_release_tag: release-5.1.0<br>dockerhub_image_source: dockerhub/sunbird-rc-certificate-api:v0.0.11</p>    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                             |                                                                           |
| Build/Sunbird-RC/CertificateSign         | <p>github_release_tag: release-5.1.0<br>dockerhub_image_source: dockerhub/sunbird-rc-certificate-signer:v0.0.11</p> | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                             |                                                                           |
| Build/Sunbird-RC/Registry                | <p>github_release_tag: release-5.1.0<br>dockerhub_image_source: dockerhub/sunbird-rc-core:v0.0.13</p>               | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                             |                                                                           |
| Build/UCI/Utils                          | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/utils.git](https://github.com/samagra-comms/utils.git)                                                   |                                                                           |
| Build/UCI/message-rosa                   | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/message-rosa.git](https://github.com/samagra-comms/message-rosa.git)                                     |                                                                           |
| Build/UCI/dao                            | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/dao.git](https://github.com/samagra-comms/dao.git)                                                       |                                                                           |
| Build/UCI/Adapter                        | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/adapter.git](https://github.com/samagra-comms/adapter.git)                                               |                                                                           |
| Build/UCI/Inbound                        | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/inbound.git](https://github.com/samagra-comms/inbound.git)                                               |                                                                           |
| Build/UCI/odk                            | release-4.4.0\_RC1                                                                                                  | [https://github.com/samagra-comms/odk.git](https://github.com/samagra-comms/odk.git)                                                       |                                                                           |
| Build/UCI/Outbound                       | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/outbound](https://github.com/samagra-comms/outbound)                                                     |                                                                           |
| Build/UCI/Orchestrator                   | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/orchestrator.git](https://github.com/samagra-comms/orchestrator.git)                                     |                                                                           |
| Build/UCI/Transformer                    | release-5.1.0                                                                                                       | [https://github.com/samagra-comms/transformer.git](https://github.com/samagra-comms/transformer.git)                                       |                                                                           |
| Build/UCI/UCI                            | release-5.0.0\_RC3                                                                                                  | [https://github.com/samagra-comms/uci-apis.git](https://github.com/samagra-comms/uci-apis.git)                                             |                                                                           |
| Build/Plugins/CollectionEditor           | release-3.6.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-collection-editor.git](https://github.com/project-sunbird/sunbird-collection-editor.git)       | A bunch of plugins to handle collection editing                           |
| Build/Plugins/ContentEditor              | release-5.0.0\_RC3                                                                                                  | [https://github.com/project-sunbird/sunbird-content-editor.git](https://github.com/project-sunbird/sunbird-content-editor.git)             | A bunch of plugins to edit certain types of content                       |
| Build/Plugins/ContentPlayer              | release-4.6.0                                                                                                       | [https://github.com/project-sunbird/sunbird-content-player.git](https://github.com/project-sunbird/sunbird-content-player.git)             | A bunch of plugins to handle content playback                             |
| Build/Plugins/ContentPlugins             | release-5.2.0\_RC1                                                                                                  | [https://github.com/project-sunbird/sunbird-content-plugins.git](https://github.com/project-sunbird/sunbird-content-plugins.git)           | A bunch of base plugins to support the content editors and content player |
| Build/Plugins/GenericEditor              | release-5.0.0\_RC3                                                                                                  | [https://github.com/project-sunbird/sunbird-generic-editor.git](https://github.com/project-sunbird/sunbird-generic-editor.git)             | A bunch of plugins to edit certain types of content                       |

**Service Provision**

> **Note**:
>
> * Jobs can be run in parallel to speed up execution. The only exception is you should **NOT** run multiple jobs which will provision packages on the same server in parallel

| JENKINS JOB TO RUN                                 | GITHUB TAG                                                                                                                                                                                            | GITHUB REPO                                                                                                                          | COMMENTS                                                                                                                                                                                                                  |
| -------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| OpsAdministration/Core/Bootstrap                   | hosts: env, branch\_or\_tag: release-5.1.0 , tag: bootstrap\_any,node\_exporter                                                                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the deployer user and installs node exporter and python packages for ansible                                                                                                                                      |
| OpsAdministration/KnowledgePlatform/Bootstrap      | hosts: env, branch\_or\_tag: release-5.1.0, tag: bootstrap\_any,node\_exporter                                                                                                                        | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the deployer user and installs node exporter and python packages for ansible                                                                                                                                      |
| OpsAdministration/DataPipeline/Bootstrap           | hosts: env, branch\_or\_tag: release-5.1.0, tag: bootstrap\_any,node\_exporter                                                                                                                        | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the deployer user and installs node exporter and python packages for ansible                                                                                                                                      |
| Provision/Core/ApplicationElasticSearch            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Elasticsearch used by the applications                                                                                                                                                                           |
| Provision/Core/Cassandra                           | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Cassandra database                                                                                                                                                                                               |
| Provision/Core/CassandraExporter                   | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Cassandra prometheus exporter                                                                                                                                                                                    |
| Provision/Core/ESMapping                           | indices\_name: all, branch\_or\_tag: release-5.1.0, es\_files: indices,mappings,pipelines                                                                                                             | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates Elasticsearch indices and mappings                                                                                                                                                                                |
|                                                    |                                                                                                                                                                                                       |                                                                                                                                      |                                                                                                                                                                                                                           |
| Provision/Core/Keycloak                            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs java and other pre-requisites for Keycloak service                                                                                                                                                               |
| Provision/Core/LogES                               | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Elasticsearch used to store application and VM logs                                                                                                                                                              |
| Provision/Core/MongodbCluster                      | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Mongo database                                                                                                                                                                                                   |
| Provision/Core/Postgres                            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Postgres database                                                                                                                                                                                                |
| Provision/Core/PostgresDbUpdate                    | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates Postgres tables, schema and users                                                                                                                                                                                 |
| Provision/Core/Graylog                             | <p>release-5.1.0<br>tag: all</p>                                                                                                                                                                      | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Graylog, MongoDB and OpenJDK                                                                                                                                                                                     |
| OpsAdministration/Core/GraylogMongoImport          | <p>release-5.1.0<br>tag: all</p>                                                                                                                                                                      | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Graylog dashboards, inputs and other configurations                                                                                                                                                              |
| OpsAdministration/Core/GraylogGeoIP                | <p>release-5.1.0</p><p>graylog_geoip_compressed_file_name: geoip file name in <code>.tar.gz</code> format</p><p>graylog_geoip_file_name: geoip file name within the <code>.tar.gz</code> file<br></p> | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs the Geo IP database on Graylog. The `.tar.gz` file should be uploaded to the `artifacts` storage bucket before running the job. You can download the GeoIP2 City Database in the `.tar.gz` from Maxmind website. |
| Provision/KnowledgePlatform/Learning               | release-5.2.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Install tomcat and other pre-requisites for Learning service                                                                                                                                                              |
| Provision/KnowledgePlatform/Neo4j                  | release-5.2.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Installs Neo4j database                                                                                                                                                                                                   |
| Provision/DataPipeline/AnalyticsGeoLocationDBSetup | release-5.1.0, geoip\_zip\_csv\_file\_name: Enter the maxmind city database zip file name you uploaded to `artifacts` container                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates tables and schema in Postgres                                                                                                                                                                                     |
| Provision/DataPipeline/AnalyticsSpark              | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Apache Spark and other pre-requisites for reporting                                                                                                                                                               |
| Provision/DataPipeline/Druid                       | release-5.1.0, service: Select All, remote: raw                                                                                                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Druid                                                                                                                                                                                                            |
| Provision/DataPipeline/InfluxDB                    | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Influx DB used by monitoring system                                                                                                                                                                               |
| Provision/DataPipeline/Kafka                       | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Kafka                                                                                                                                                                                                            |
| Provision/DataPipeline/KafkaIndexer                | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Logstash to read telemetry data from Kafka and index into Log ES                                                                                                                                                  |
| Provision/DataPipeline/Postgres                    | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Postgres database and users                                                                                                                                                                                      |
| Provision/DataPipeline/PostgresDbUpdate            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates Postgres tables, schema and users                                                                                                                                                                                 |
| Provision/DataPipeline/Redis                       | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Redis                                                                                                                                                                                                             |
| Provision/DataPipeline/Zookeeper                   | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Zookeeper                                                                                                                                                                                                        |

**Artifact Upload**

* Every job in the **Build** directory has a corresponding job in **ArtifactUpload** directory with the same name
* These jobs are auto triggered and usually run without issues after the corresponding job in the build directory succeeds
* The job will fail if your ansible inventory setup is incorrect or incomplete
* If the job has failed, fix the ansible variables issue and rerun the job to upload the artifact / docker image
* Ensure the artifact upload jobs are successful before proceeding

**Service Deploy**

> **Note**:
>
> * We will run the jobs which are a pre-requisite for other jobs first
> * The pre-requisite jobs reside in different folders so we will be jumping across folders
> * Jobs in the **Deploy** directory can be run in parallel and don’t have any restrictions if the code is from same repo unlike the **Build** directory
> * Ensure you don’t run those jobs in parallel which modify the databases (such as cassandra, neo4j etc)

| JENKINS JOB TO RUN                             | GITHUB TAG                                                                          | GITHUB REPO                                                                                                                          | COMMENTS                                                                                                                                                                                                                   |
| ---------------------------------------------- | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Deploy/Kubernetes/BootstrapMinimal             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates namespaces, configmaps and secrets                                                                                                                                                                                 |
| Deploy/DataPipeline/BootstrapMinimal           | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates namespaces, configmaps and secrets                                                                                                                                                                                 |
| Deploy/Kubernetes/Monitoring                   | branch\_or\_tag: release-5.1.0, tag: all                                            | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys the monitoring stack which can be accessed via DOMAIN/grafana/ post nginx-public-ingress deployment                                                                                                                |
| Deploy/Kubernetes/CassandraTrigger             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs the Cassandra triggers                                                                                                                                                                                            |
| Deploy/KnowledgePlatform/CassandraTrigger      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Installs the Cassandra triggers                                                                                                                                                                                            |
| Deploy/Kubernetes/CassandraDBUpdate            | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates / Updates Cassandra DB schema                                                                                                                                                                                      |
| Deploy/KnowledgePlatform/CassandraDbUpdate     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Creates / Updates Cassandra DB schema                                                                                                                                                                                      |
| Deploy/Kubernetes/Cassandra                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates / Updates Cassandra DB schema                                                                                                                                                                                      |
| Deploy/Kubernetes/KafkaSetup                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates / Updates Kafka Topics                                                                                                                                                                                             |
| Deploy/DataPipeline/KafkaSetup                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates / Updates Kafka Topics                                                                                                                                                                                             |
| Deploy/KnowledgePlatform/KafkaSetup            | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Creates / Updates Kafka Topics                                                                                                                                                                                             |
| Deploy/KnowledgePlatform/Learning              | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Deploys the Learning service on tomcat                                                                                                                                                                                     |
| Deploy/KnowledgePlatform/Neo4j                 | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Deploys the Neo4j plugins                                                                                                                                                                                                  |
| Deploy/KnowledgePlatform/Neo4jDefinitionUpdate | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Creates / Updates the Neo4j database                                                                                                                                                                                       |
| Deploy/KnowledgePlatform/FlinkJobs             | branch\_or\_tag: release-5.2.0, job\_names\_to\_deploy: Select All                  | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Deploys the Flink jobs in Kubernetes cluster                                                                                                                                                                               |
| Deploy/KnowledgePlatform/LoggingFileBeatsVM    | branch\_or\_tag: release-5.1.0, hosts: Select All, tags: default                    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys filebeat in all the selected VMs                                                                                                                                                                                   |
| Deploy/Kubernetes/nginx-private-ingress        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | <p>Deploys nginx with a private load balancer </p><p>Note: Before deploying update <code>private_ingressgateway_ip</code> variable in private repo with available ip in kubernetes subnet address range.</p>               |
| Deploy/Kubernetes/APIManager                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Kong, the API gateway                                                                                                                                                                                              |
| Deploy/Kubernetes/OnboardAPIs                  | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the APIs in Kong                                                                                                                                                                                                   |
| Deploy/Kubernetes/OnboardConsumers             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | <p>Deploy only after OnboardAPIs.</p><p>Creates the consumers in Kong. Now read the comment mentioned in <strong>Core/Secrets.yml</strong> against the variable <code>core_vault_sunbird_api_auth_token</code></p>         |
| Deploy/Kubernetes/KongJWTAdminUtil             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Onboards the v2 consumers for mobile, desktop and portal                                                                                                                                                                   |
| Deploy/Kubernetes/Keycloak                     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Keycloak                                                                                                                                                                                                           |
| Deploy/Kubernetes/KeycloakRealm                | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the Sunbird Realm. Now read the comment mentioned in **Core/Secrets.yml** against the variables `core_vault_sunbird_sso_publickey`, `adminutil_refresh_token_public_key_kid`, `adminutil_refresh_token_secret_key` |
| Deploy/Kubernetes/BootstrapMongodb             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the initial token in Mongo database                                                                                                                                                                                |
| Deploy/Kubernetes/CertTemplate                 | branch\_or\_tag: release-5.1.0, sunbird\_util\_branch\_or\_tag: release-4.10.0\_RC1 | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the certificate templates into Object storage                                                                                                                                                                      |
| Deploy/Kubernetes/UploadChatbotConfig          | branch\_or\_tag: release-5.1.0, bot\_repo\_branch: master                           | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the chatbot configs to Object storage                                                                                                                                                                              |
| Deploy/Kubernetes/UploadFAQs                   | branch\_or\_tag: release-5.1.0, source\_folder: Select All                          | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the FAQs to Object storage                                                                                                                                                                                         |
| Deploy/Kubernetes/UploadSchema                 | branch\_or\_tag: release-5.1.0, kp\_branch\_or\_tag: release-4.9.0\_RC8             | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the Content schemas to Object storage                                                                                                                                                                              |
| Deploy/Kubernetes/AdminUtils                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Adminutils service                                                                                                                                                                                                 |
| Deploy/Kubernetes/Analytics                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Analytics service                                                                                                                                                                                                  |
| Deploy/Kubernetes/APIManagerEcho               | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Echo service                                                                                                                                                                                                       |
| Deploy/Kubernetes/Assessment                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Assessment service                                                                                                                                                                                                 |
| Deploy/Kubernetes/Bot                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Bot service                                                                                                                                                                                                        |
| Deploy/Kubernetes/Cert                         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Cert service                                                                                                                                                                                                       |
| Deploy/Kubernetes/CertRegistry                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys CertRegistry service                                                                                                                                                                                               |
| Deploy/Kubernetes/Content                      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Content service                                                                                                                                                                                                    |
| Deploy/Kubernetes/Dial                         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Dial service                                                                                                                                                                                                       |
| Deploy/Kubernetes/Enc                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Enc service                                                                                                                                                                                                        |
| Deploy/Kubernetes/Groups                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Groups service                                                                                                                                                                                                     |
| Deploy/Kubernetes/KnowledgeMW                  | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys KnowledgeMW service                                                                                                                                                                                                |
| Deploy/Kubernetes/Learner                      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Learner service                                                                                                                                                                                                    |
| Deploy/Kubernetes/Lms                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Lms service                                                                                                                                                                                                        |
| Deploy/Kubernetes/Notification                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Notification service                                                                                                                                                                                               |
| Deploy/Kubernetes/Player                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Player service                                                                                                                                                                                                     |
| Deploy/Kubernetes/Print                        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Print service                                                                                                                                                                                                      |
| Deploy/Kubernetes/Report                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Report service                                                                                                                                                                                                     |
| Deploy/Kubernetes/Router                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Router service                                                                                                                                                                                                     |
| Deploy/Kubernetes/Search                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Search service                                                                                                                                                                                                     |
| Deploy/Kubernetes/Taxonomy                     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Taxonomy service                                                                                                                                                                                                   |
| Deploy/Kubernetes/Telemetry                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Telemetry service                                                                                                                                                                                                  |
| Deploy/Kubernetes/LoggingFileBeatsVM           | branch\_or\_tag: release-5.1.0, hosts: Select All, tags: default                    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys filebeat in all the selected VMs                                                                                                                                                                                   |
| Deploy/Kubernetes/Logging                      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Run job twice by choosing the **chartname** as - `filebeat`, `oauth2-proxy`. Deploys filebeats and oauth2 proxy respectively. Graylog can accessed via DOMAIN/graylog/                                                     |
| Deploy/Kubernetes/nginx-public-ingress         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys the nginx web server. Now you can open visit your domain                                                                                                                                                           |
| Deploy/Kubernetes/Nodebb                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys NodeBB service. Now read the comment mentioned in **Core/Secrets.yml** against the variable `discussionsmw_nodebb_authorization_token`                                                                             |
| Deploy/Kubernetes/DiscussionsMW                | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys DiscussionsMW service                                                                                                                                                                                              |
| Deploy/Lern/LernDataProducts                   | release-5.1.0                                                                       | [https://github.com/Sunbird-Lern/data-products](https://github.com/Sunbird-Lern/data-products)                                       |                                                                                                                                                                                                                            |
| Deploy/staging/Lern/LernFlinkJobs              | release-5.1.0                                                                       | [https://github.com/Sunbird-Lern/data-pipeline.git](https://github.com/Sunbird-Lern/data-pipeline.git)                               |                                                                                                                                                                                                                            |
| Deploy/managed-learn/gotenberg                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/managed-learn/ml-analytics-service      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/managed-learn/ml-core-service           | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/managed-learn/ml-projects-service       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/managed-learn/ml-reports-service        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/managed-learn/ml-survey-service         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/Sunbird-RC/CertificateApi               | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/Sunbird-RC/CertificateSign              | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/Sunbird-RC/Registry                     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/Sunbird-RC/UploadRCSchema               | branch\_or\_tag:release-5.1.0, source\_folder: sunbird-RC                           | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/fusionauth                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/gql                                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/Inbound                             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/odk                                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/Orchestrator                        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/Outbound                            | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/Transformer                         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/UCI/UCI                                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                            |
| Deploy/Plugins/CollectionEditor                | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys CollectionEditor files to Object storage                                                                                                                                                                           |
| Deploy/Plugins/ContentEditor                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys ContentEditor files to Object storage                                                                                                                                                                              |
| Deploy/Plugins/ContentPlayer                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys ContentPlayer files to Object storage                                                                                                                                                                              |
| Deploy/Plugins/ContentPlugins                  | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys ContentPlugins files to Object storage                                                                                                                                                                             |
| Deploy/Plugins/GenericEditor                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys GenericEditor files to Object storage                                                                                                                                                                              |
| Deploy/DataPipeline/AdhocScripts               | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys AdHoc scripts in Spark VM                                                                                                                                                                                          |
| Deploy/DataPipeline/AnalyticsCore              | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys jars in Spark VM                                                                                                                                                                                                   |
| Deploy/DataPipeline/CoreDataProducts           | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys jars in Spark VM                                                                                                                                                                                                   |
| Deploy/DataPipeline/DruidIngestion             | branch\_or\_tag: release-5.1.0, ingestion\_task\_names: Select All                  | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys and starts Druid ingestion tasks. **This job will be updated in a couple of days. Please wait until then**                                                                                                         |
| Deploy/DataPipeline/EdDataProducts             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys jars in Spark VM                                                                                                                                                                                                   |
| Deploy/DataPipeline/ETLJobs                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys ETL scripts in Spark VM                                                                                                                                                                                            |
| Deploy/DataPipeline/ETLDruidContentIndexer     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys ETLDruidContentIndexer                                                                                                                                                                                             |
| Deploy/DataPipeline/ETLUserCacheIndexer        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys ETLUserCacheIndexer                                                                                                                                                                                                |
| Deploy/DataPipeline/Secor                      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys Secor Statefulsets in Kubernetes cluster                                                                                                                                                                           |
| Deploy/DataPipeline/FlinkPipelineJobs          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys Flink jobs Kubernetes cluster                                                                                                                                                                                      |
| Deploy/DataPipeline/GraphitePrometheusExporter | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys graphite prometheus exporter in Druid VM                                                                                                                                                                           |
| Deploy/DataPipeline/LoggingFileBeatsVM         | branch\_or\_tag: release-5.1.0, hosts: Select All, tags: default                    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys filebeat in all the selected VMs                                                                                                                                                                                   |

